<resources>
    <string name="app_name">LSA Payment</string>

    <string name="submit">Save &amp; Submit</string>
    <string name="edit">Edit</string>
    <string name="bank_qr_code">Show Bank QR code</string>
    <string name="bank_qr_code_ref_number">Reference Number*</string>
    <string name="bank_qr_code_ref_number1">Reference Number*</string>
    <string name="remarks_any">Remarks Any</string>
    <string name="transaction_id_upload">Upload Photo of transaction</string>
    <string name="cheque_dd_photo_upload">Upload Photo of Cheque/DD</string>
    <string name="select_payment_type">Select payment type</string>
    <string name="amt_collected_per_month_title">Amount to be collected Per Month</string>
    <string name="collected_from_title">To be collected from mm/yy</string>
    <string name="total_dues">Total Dues</string>
    <string name="paid_amt">Paid amount (₹)</string>
    <string name="balance">Balance (₹)</string>
    <string name="amount_collection">Amount Collection</string>
    <string name="zone">Select Zone</string>
    <string name="select">Select</string>
    <string name="search_by">Search By</string>
    <string name="ref_id_tag_no">Ref ID Tag No/Auto Tag ID</string>
    <string name="phone_no">Phone No.</string>

    <string name="cheque_photo_upload">Upload Photo of Cheque</string>
    <string name="cheque_no">Cheque Number</string>
    <string name="bank_name_cheque">Cheque issued Bank Name</string>

    <string name="dd_photo_upload">Upload Photo of DD</string>
    <string name="dd_no">DD Number</string>
    <string name="bank_name_dd">DD issued Bank Name</string>

    <string name="neft_photo_upload">Upload Photo of NEFT</string>
    <string name="neft_no">NEFT Number</string>
    <string name="bank_name_neft">NEFT done Bank Name</string>

    <string name="rtgs_photo_upload">Upload Photo of RTGS</string>
    <string name="rtgs_no">RTGS Number</string>
    <string name="bank_name_rtgs">RTGS done Bank Name</string>

    <string name="property_house_no">Property House No.</string>
    <string name="hind_search_view1">Ref ID Tag No/Auto Tag ID</string>
    <string name="hind_search_view2">Search By House No./Phone No./Owner Name</string>

    <string name="zone_ward">ZONE and Wards</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_contact_no">Owner Contact No</string>
    <string name="establishment">Establishment</string>
    <string name="category_sub_cat">Category/Sub Category</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>

    <string name="no_family_members">No. of Family Members</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="lat_long">Latitude and Longitude</string>

    <string name="Grand_Total">Grand Total</string>
    <string name="Today_Total">Today Total</string>
    <string name="Resident_Apartment">Resident Apartment</string>
    <string name="Resident_Apartment_Owner">Resident Apartment (Owner)</string>
    <string name="Resident_Apartment_Tenant">Resident Apartment (Tenant)</string>
    <string name="Resident_Individual">Resident Individual</string>
    <string name="Resident_Individual_Owner">Resident Individual (Owner)</string>
    <string name="Resident_Individual_Tenant">Resident Individual (Tenant)</string>
    <string name="CommercialApartmentOwner">Commercial Apartment (Owner)</string>
    <string name="Commercial_Apartment_Tenant">Commercial Apartment (Tenant)</string>
    <string name="Commercial_Apartment_Tenant_new">Commercial Apartment (Tenant)</string>
    <string name="Commercial_Building">Commercial Building</string>
    <string name="Commercial_Individual">Commercial Individual</string>
    <string name="Commercial_Individual_Owner">Commercial Individual (Owner)</string>
    <string name="Commercial_Individual_Tenant">Commercial Individual (Tenant)</string>
    <string name="Add_Record">Add New Record</string>
    <string name="payment_collection">Payment Collection (₹)</string>
    <string name="Sync_Saved">Sync Saved Data - 10</string>

    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="issued_date">Issued date(DD-MM-YYYY)</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="reference_id">Reference ID</string>
    <string name="transaction_id">Transaction ID</string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>