<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hide_dd_payment_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/upload_payment_dd_entry_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/red_star_12x12"
        android:gravity="center|left"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:text="@string/dd_photo_upload"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/upload_dd_payment_entry_img_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="@drawable/bg_border" />

        <LinearLayout
            android:id="@+id/hide_ln_lay_dd_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/upload_camera_image_dd_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|bottom"
                android:background="@drawable/ic_baseline_photo_camera_24"
                android:backgroundTint="@color/lsa_btn_bg"
                android:text="Upload Photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Upload Photo"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>


    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/bank_name_dd"
        android:textColorHint="@android:color/black"
        app:hintTextAppearance="@style/MyHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/payment_dd_bank_name_entry_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/dd_no"
        android:textColorHint="@android:color/black"
        app:hintTextAppearance="@style/MyHintStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dd_number_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="6dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="25dp"-->
<!--        android:hint="@string/issued_date"-->
<!--        android:textColorHint="@android:color/black"-->
<!--        app:hintTextAppearance="@style/MyHintStyle"-->
<!--        app:boxStrokeColor="@color/lsa_grey"-->
<!--        app:boxStrokeWidth="1dp"-->
<!--        app:boxStrokeWidthFocused="2dp">-->

<!--    -->
<!--</com.google.android.material.textfield.TextInputLayout>-->

<!--    <Button-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_marginStart="6dp"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="25dp"-->
<!--        android:id="@+id/dd_date_btn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="start|center_vertical"-->
<!--        android:backgroundTint="@color/lsa_grey"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:text="Issued Date: "-->
<!--        android:background=""/>-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dd_date_btn"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="25dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/black"
        android:text="Issued Date: "
        android:gravity="start|center_vertical"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp"/>


    </LinearLayout>

